# knn-seq

./: .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
data/: README.md  en.model  en.vocab  fixtures.py  test.en  test.ja  train.en  train.ja  valid.en  valid.ja
data/checkpoints/: checkpoint_best.pt
data/data-bin/: dict.en.txt  dict.ja.txt  test.en-ja.en.idx  test.en-ja.ja.idx  train.en-ja.en.idx  train.en-ja.ja.idx  valid.en-ja.en.idx  valid.en-ja.ja.idx
data/detok/: test.en  test.ja  train.en  train.ja  valid.en  valid.ja
data/for_checkpoint2/: ja.model  ja.vocab  test.detok.out  test.out  test.out.ref  test.out.sys  train.ja
data/for_checkpoint2/checkpoints/: checkpoint_last.pt
data/for_checkpoint2/data-bin/: dict.en.txt  dict.ja.txt
data/for_checkpoint2/tokenized/: train.en  train.ja
data/pretok/: test.en  valid.en
data/tokenized/: test.en
knn_seq/: __init__.py  dataset_wrapper.py  dataset_wrapper_test.py  fixtures.py  test_dataset_wrapper.py  test_util.py  test_utils.py  translation_knn.py  translation_knn_multi.py  utils.py  utils_test.py
knn_seq/cli/: binarize.py  binarize_fairseq.py  build_index.py  create_datastore.py  create_datastore_fairseq.py  store_keys.py  store_keys_hf.py  store_values.py  store_values_hf.py
knn_seq/data/: __init__.py  datastore.py  datastore_test.py  key_storage.py  key_storage_test.py  test_data_datastore.py  test_data_token_storage.py  token_storage.py  token_storage_test.py
knn_seq/models/: __init__.py  conftest.py  fairseq_knn_model.py  fairseq_knn_model_base.py  fairseq_knn_model_base_test.py  fairseq_knn_model_subset.py  fairseq_knn_model_test.py  fairseq_knn_model_vanilla.py  fairseq_knn_model_vanilla_test.py  fairseq_knn_transformer.py  fairseq_subsetknn_model.py  hf_model.py  hf_tokenizer.py  hf_tokenizer_test.py  sbert.py  test_fairseq_knn_model_base.py  test_fairseq_knn_transformer.py
knn_seq/search_index/: __init__.py  faiss_index.py  faiss_index_fast.py  faiss_index_fast_test.py  faiss_index_test.py  search_index.py  search_index_test.py  test_search_index.py  torch_pq.py  torch_pq_index.py  torch_pq_index_base.py  torch_pq_index_base_test.py
knn_seq/tasks/: __init__.py  dataset_wrapper.py  dataset_wrapper_test.py  translation_knn.py  translation_multi_simple_epoch_knn.py
tests/: test_data_datastore.py  test_util.py
