[tool.isort]
profile = "black"

[tool.poetry]
name = "knn-seq"
version = "0.1.0"
description = "kNN-MT"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^1.12.1+cu116", source = "torch+cu116"}
fairseq = "0.12.1"
faiss-gpu = "^1.7.2"
sentence-transformers = "^2.2.2"
sacrebleu = {extras = ["ja"], version = "^2.2.0"}
h5py = "^3.7.0"

[tool.poetry.scripts]
knnseq-bin = "knn_seq.cli.binarize:cli_main"
knnseq-bin-fs = "knn_seq.cli.binarize_fairseq:cli_main"
knnseq-ds = "knn_seq.cli.create_datastore:cli_main"
knnseq-ds-fs = "knn_seq.cli.create_datastore_fairseq:cli_main"
knnseq-index = "knn_seq.cli.build_index:cli_main"

[[tool.poetry.source]]
name = "torch+cu116"
url = "https://download.pytorch.org/whl/cu116"
default = false
secondary = true

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
