[tool.poetry]
name = "knn-seq"
version = "0.1.0"
description = "Efficient, Extensible kNN-MT Framework"
authors = ["Hiroyuki Deguchi <deguchi.hiroyuki.db0@is.naist.jp>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "knn_seq"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"
fairseq = {git = "https://github.com/facebookresearch/fairseq.git", tag = "v0.12.3"}
faiss-gpu = "^1.7.2"
sentence-transformers = "^2.2.2"
h5py = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[tool.poetry.scripts]
knnseq-val-hf = "knn_seq.cli.store_values_hf:cli_main"
knnseq-val = "knn_seq.cli.store_values:cli_main"
knnseq-key-hf = "knn_seq.cli.store_keys_hf:cli_main"
knnseq-key = "knn_seq.cli.store_keys:cli_main"
knnseq-index = "knn_seq.cli.build_index:cli_main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
